--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ebb-api"
+name = "ebbflow-api"
 version = "0.1.0"
 authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
 edition = "2018"
@@ -8,6 +8,5 @@ edition = "2018"
 
 [dependencies]
 chrono = "0.4"
-serde = "1.0"
-swagger = "4.0.2"
+serde = { version = "1.0", features = ["derive"] }
 rand = "0.7"
